# babooshka-tv

./: .gitignore  README.md  deploy.sh
crates/api-types/: Cargo.toml
crates/api-types/src/: lib.rs
crates/brightness-control/: Cargo.toml
crates/brightness-control/src/: main.rs
crates/lid-publisher/: Cargo.toml
crates/lid-publisher/src/: main.rs
crates/lid-subscriber/: Cargo.toml
crates/lid-subscriber/examples/: lid_subscriber_demo.rs
crates/lid-subscriber/src/: lib.rs
crates/overseer/: Cargo.toml
crates/overseer/src/: main.rs
crates/player/: Cargo.toml
crates/player/src/: api.rs  main.rs  playlist.rs  watch_later.rs
crates/smartplug-control/: Cargo.toml
crates/smartplug-control/src/: main.rs
crates/utils/: Cargo.toml
crates/utils/examples/: wayland_detect.rs
crates/utils/src/: lib.rs
crates/volume-control/: Cargo.toml
crates/volume-control/src/: main.rs
